--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeo_driver-DreamScreen",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "NEEO driver, DreamScreen",
   "repository": "https://github.com/nklerk/neeo_driver-DreamScreen",
   "license": "MIT",
@@ -10,7 +10,7 @@
   },
   "author": "Niels de Klerk",
   "dependencies": {
-    "dreamscreen-node": "*",
+    "dreamscreen-node": "^0.0.2",
     "neeo-sdk": "^0.48.13"
   }
 }
