--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,3 @@
 .vscode/
-node_modules/.bin/
-node_modules/accepts/
-node_modules/array-flatten/
-node_modules/axios/
-node_modules/bluebird/
-node_modules/body-parser/
-node_modules/bonjour/
-node_modules/buffer-indexof/
-node_modules/bytes/
-node_modules/content-disposition/
-node_modules/content-type/
-node_modules/cookie/
-node_modules/cookie-signature/
-node_modules/debug/
-node_modules/deep-equal/
-node_modules/depd/
-node_modules/destroy/
-node_modules/dns-equal/
-node_modules/dns-packet/
-node_modules/dns-txt/
-node_modules/ee-first/
-node_modules/encodeurl/
-node_modules/escape-html/
-node_modules/etag/
-node_modules/express/
-node_modules/finalhandler/
-node_modules/follow-redirects/
-node_modules/forwarded/
-node_modules/fresh/
-node_modules/http-errors/
-node_modules/iconv-lite/
-node_modules/inherits/
-node_modules/ip/
-node_modules/ipaddr.js/
-node_modules/media-typer/
-node_modules/merge-descriptors/
-node_modules/methods/
-node_modules/mime/
-node_modules/mime-db/
-node_modules/mime-types/
-node_modules/ms/
-node_modules/multicast-dns/
-node_modules/multicast-dns-service-types/
-node_modules/neeo-sdk/
-node_modules/negotiator/
-node_modules/on-finished/
-node_modules/parseurl/
-node_modules/path-to-regexp/
-node_modules/proxy-addr/
-node_modules/qs/
-node_modules/range-parser/
-node_modules/raw-body/
-node_modules/safe-buffer/
-node_modules/send/
-node_modules/serve-static/
-node_modules/setprototypeof/
-node_modules/statuses/
-node_modules/thunky/
-node_modules/tokensearch.js/
-node_modules/type-is/
-node_modules/unpipe/
-node_modules/utils-merge/
-node_modules/vary/
+node_modules/
 npm-debug.log
