--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeo_driver-dreamscreen",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "NEEO driver, DreamScreen",
   "repository": {
     "type": "git",
@@ -9,7 +9,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "neeo-sdk start"
   },
   "author": "Niels de Klerk",
   "dependencies": {
